--- a/templates/base.html
+++ b/templates/base.html
@@ -103,9 +103,12 @@
                         <i data-lucide="shopping-cart" class="w-6 h-6"></i>
                     </button>
                 </a>
+
+                <a href="/profile">
                     <button class="text-white">
                         <i data-lucide="user" class="w-6 h-6"></i>
                     </button>
+                </a>
                 </div>
             </div>
         </div>
@@ -347,7 +350,7 @@
                 <i data-lucide="shopping-cart" class="w-6 h-6"></i>
                 <span class="text-xs mt-1">Cart</span>
             </a>
-            <a href="#" class="flex flex-col items-center text-gray-600">
+            <a href="/profile" class="flex flex-col items-center text-gray-600">
                 <i data-lucide="user" class="w-6 h-6"></i>
                 <span class="text-xs mt-1">Profile</span>
             </a>
